# openrag

./: .gitignore  README.md  pyproject.toml  setup.py
openrag/: __init__.py  __main__.py  cli.py  config.py
openrag/chroma/: manager.py  server.py
openrag/embeddings/: __init__.py  ollama_embedding.py
openrag/indexer/: processor.py  watcher.py
openrag/query/: server.py
openrag/utils/: logging.py  process.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_chroma.py  test_cli.py  test_integration.py  test_processor.py  test_watcher.py
